fix: code refactors